--- a/demo/css/multiple.css
+++ b/demo/css/multiple.css
@@ -64,10 +64,19 @@
 
 [data-immanuel-boundary="angle-markers-start"],
 [data-immanuel-boundary="secondary-angle-markers-start"] {
-    top: 4px;
-    left: 4px;
-    right: 4px;
-    bottom: 4px;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+}
+@media only screen and (min-width: 700px) {
+    [data-immanuel-boundary="angle-markers-start"],
+    [data-immanuel-boundary="secondary-angle-markers-start"] {
+        top: 4px;
+        left: 4px;
+        right: 4px;
+        bottom: 4px;
+    }
 }
 
 [data-immanuel-planet] {
